# pickpick

./: .gitignore  .todo  README.md
cpp/: CMakeLists.txt  config.yaml  main.cpp
cpp/docs/flare/: 20260601_mac_gpu_image_pipeline.md
cpp/docs/perf/: mac_gpu_pipeline_baseline.md
cpp/include/: appRunner.h  configLoader.h  fileScanner.h  gpuSupport.h  iAnalyzer.h  imageAnalysisCore.h  imageAnalyzer.h  jpgWriter.h  jsonManager.h  macImageAnalyzer.h  perfTimer.h  photoMetadataReader.h  rawConverter.h  rawJpgMat.h  resumePlanner.h  taskState.h  threadPool.h
cpp/luts/: Natural+.cube
cpp/src/: appRunner.cpp  configLoader.cpp  fileScanner.cpp  gpuImageKernels.metal  gpuSupport.mm  imageAnalyzer.cpp  jpgWriter.mm  jsonManager.cpp  macImageAnalyzer.mm  photoMetadataReader.mm  rawConverter.cpp  rawJpgMat.cpp  resumePlanner.cpp  taskState.cpp  testRawConvert.cpp  threadPool.cpp
cpp/tests/: configLoaderTests.cpp  gpuSupportTests.cpp  imageAnalyzerBackendTests.cpp  imageAnalyzerTests.cpp  objcRuntimeTests.mm  perfTimerTests.cpp  testAssert.h  testMain.cpp
docs/: 20260601_worker_thread_stack_overflow.md  appArchitecture.md  app需求讨论.md  bugAnalysisReport_20260610.md  bugReport_duplicateGroupLogic.md  bugReport_keepBothAlertWhenTwoPhotos.md  bugReport_windowNotShowing.md  currentExposureBlurLogic.md  swift-cpp-image-pipeline.md
docs/codeReview/: 20250603_fixWindowInitializer.md  20260601_threadPool_pthread_refactor.md  20260603_photo_viewer_display.md  20260608_duplicateGroupFix.md  20260609_progress_fix_analyzer_modularity.md  20260610_bugFixes.md  20260610_remove_cpp_native.md  20260611_scan_config_fix.md  20260614_xcodeWarningsQualityFix.md  260601_cppReview.md  260602_rawMetadataDuplicateGroups.md  260602_raw_viewer_app_implementation.md  260603_rawViewer.md  260606_metalViewController.md  260606_plan3_view_rewrites.md  260606_plan4_navigation_integration.md  260608_realDeleteTrash.md  260611_fullCodeReviewFix.md  260611_full_code_review.md  260611_groupPokerFan.md  260611_rawSegmentAvailability.md  260611_rawSegmentAvailabilityFixImplementation.md  260611_restore_normal_rotation.md  260613_xcodeWarningsFullReview.md
docs/flare/: 20250603_fixWindowInitializer.md  20260529_photo_analyzer_execution_plan.md  20260601_fix_worker_stack_overflow.md  20260601_gpu_only_image_analysis.md  20260601_raw_viewer_app_implementation.md  20260602_cppBugFixes.md  20260602_fixMetalResourcePerformance.md  20260602_rawMetadataDuplicateGroups.md  20260603_photo_viewer_display_plan.md  20260603_raw_viewer_bug_fix.md  20260606_plan1_image_service_split.md  20260606_plan2_metal_view_controller.md  20260606_plan3_view_rewrites.md  20260606_plan4_navigation_integration.md  20260608_duplicateGroupFix.md  20260608_keepBothAlertFix.md  20260608_realDeleteTrash.md  20260608_trashCleanup.md  20260609_progress_fix_analyzer_modularity.md  20260609_raw_jpg_color_fix.md  20260609_swift_code_organization.md  20260610_bugFixes.md  20260610_groupCard_memory_fix.md  20260610_remove_cpp_native_analysis.md  20260611_fullCodeReviewFix.md  20260611_groupPokerFan.md  20260611_rawSegmentAvailabilityFix.md  20260611_remove_cpp_native_review_fix.md  20260611_restore_normal_rotation.md  20260611_scan_config_fix.md  20260613_xcodeWarningsQualityFix.md  260603_fixBuildAndCrashes.md
docs/manualValidation/: 20260613_xcodeWarningsQualityFix.md
docs/perf/: 20260602_metalResourceValidation.md
docs/recipe/: 20260601_gpu_only_image_analysis_recipe.md  20260601_raw_viewer_app_design.md  20260602_raw_metadata_duplicate_groups_recipe.md  20260603_photo_viewer_display_recipe.md  20260603_raw_viewer_bug_fix_recipe.md  20260608_duplicateGroupFix_recipe.md  20260609_progress_fix_analyzer_modularity_recipe.md  20260609_raw_jpg_color_fix_recipe.md  20260609_swift_code_organization_recipe.md  20260610_bugFixes_recipe.md  20260610_remove_cpp_native_analysis_recipe.md  20260611_app_icon_recipe.md  20260611_exposure_config_source_recipe.md  20260611_fullCodeReviewFix_recipe.md  20260611_groupPokerFan_recipe.md  20260611_rawSegmentAvailabilityFix_recipe.md  20260611_restore_normal_rotation_recipe.md  20260611_scan_config_fix_recipe.md  20260612_duplicateZoomShortcut_recipe.md  20260613_xcodeWarningsQualityFix_recipe.md  photo-analyzer-design.md
docs/recipes/: 20260606_rawViewer_refactor_recipe.md  20260610_groupCard_memory_fix_recipe.md  20260611_remove_cpp_native_review_fix_recipe.md
rawViewer/: ContentView.swift  appCoordinator.swift  appDelegate.swift  config.yaml  duplicateCompareViewController.swift  duplicateCompareViewModel.swift  groupCardView.swift  groupGridViewController.swift  jsonReviewStateStore.swift  main.swift  mainWindowController.swift  metalPhotoView.swift  photoAnalyzerBridge.h  photoBrowserViewController.swift  photoBrowserViewModel.swift  photoImageCache.swift  photoModels.swift  photoThumbnailCache.swift  photoThumbnailService.swift  photoTrashService.swift  rawViewerApp.swift  rawViewerBridgingHeader.h  startViewController.swift
rawViewer.xcodeproj/: project.pbxproj  project.pbxproj.backup
rawViewer/bridge/: libRawBridge.h  libRawBridge.mm  photoAnalyzerBridge.mm  photoAnalyzerBridge.swift  rawViewerBridgingHeader.h
rawViewer/browser/: photoBrowserViewController.swift  photoBrowserViewModel.swift
rawViewer/duplicate/: duplicateCompareViewController.swift  duplicateCompareViewModel.swift
rawViewer/groupGrid/: groupGridViewController.swift  groupGridViewModel.swift
rawViewer/metal/: metalAnalysisContext.swift  rawAnalysisShaders.metal
rawViewer/models/: jsonReviewStateStore.swift  photoImageCache.swift  photoModels.swift
rawViewer/services/: analysisConfig.swift  analysisStore.swift  appDebugLogger.swift  appFileLogger.swift  configLoader.swift  duplicateGrouper.swift  exifReader.swift  fileScanner.swift  jpgAnalyzer.swift  photoAnalysisService.swift  photoDisplayService.swift  photoImageService.swift  photoThumbnailService.swift  rawBayerAnalyzer.swift
rawViewer/views/: groupCardView.swift  metalPhotoView.swift  (+6 more)
rawViewerTests/: baselineTests.swift
scripts/: buildDmg.sh  verifyInitChain.swift
(+13 files in other folders)
